printers: Don't crash without system-config-printer

Fix error handling in addition of new printer.

https://bugzilla.gnome.org/show_bug.cgi?id=698642